# ispy

./: .gitattributes  .gitignore  .gitmodules  .topdeps  .topmsg  CMakeLists.txt  ChangeLog  README.md  build.sh  configure  index.html  ispy-test.pro  ispy-wnt.pro  ispy.pro  ispy.sln  ispy.vcxproj  ispy.vcxproj.filters  params.json
Iguana/Utilities/: BuildFile  ChangeLog  Makefile.am  Makefile.in  configure  configure.in
Iguana/Utilities/CVS/: Entries  Repository
Iguana/Utilities/cfg/: aclocal.m4  bootstrap.sh  cpp.m4  files.m4  ltmain.sh  signal.m4  system.m4
Iguana/Utilities/cfg/CVS/: Entries  Repository
Iguana/Utilities/classlib/CVS/: Entries  Repository
Iguana/Utilities/classlib/iobase/: DirIterator.h  FileError.h  FileMapping.h  FileMappingError.h  IOChannel.h  IOChannelPair.h  IOError.h  IOInput.h  IOSelectCB.h  IOSelector.h  LocalServerSocket.h  NetworkError.h  PipeCmd.h  Socket.h  SubProcess.h
Iguana/Utilities/classlib/iotools/: BufferInputStream.h  FilterInputStream.h  FilterOutputStream.h  IOChannelInputStream.h  InputStream.h  InputStreamBuf.h  OutputStream.h  ReadBuffer.h  ReadWriteBuffer.h  StdInputStream.h  StdOutputStream.h  StdioStorage.h  StorageStreamBuf.h  SubStorage.h  WriteBuffer.h
Iguana/Utilities/classlib/sysapi/: FileAcl.h  FileMapping.h  FileNameLock.h  Filename.h  IOChannel.h  IOPlatformData.h  IOTypes.h  NamedPipeServer.h  Pipe.h  ProcessInfo.h  SharedLibrary.h  Socket.h  SubProcess.h  SystemInfo.h  TempFile.h  Time.h  config.h.in  system.h
Iguana/Utilities/classlib/utils/: BitIterator.h  BitOps.h  DebugAids.h  Environment.h  HookList.h  HostInfo.h  IntBits.h  IntTraits.h  LongLong.h  Macros.h  MapIterator.h  Range.h  Regexp.h  RegexpMatch.h  SearchPath.h  SharedLibraryError.h  StringFormat.h  StringOps.h  SysErr.h  SystemInfo.h  TimeInfo.h  UserInfo.h  iosfwd.h
Iguana/Utilities/classlib/zip/: BZDecompressor.h  BZIPInputStream.h  BZIPOutputStream.h  CPIOInputStream.h  CheckedOutputStream.h  Checksum.h  CompressOutputStream.h  Compressor.h  Decompressor.h  Digest.h  GZIPOutputStream.h  InteractiveCompressor.h  InteractiveDecompressor.h  TarError.h  ZCompressor.h  ZDecompressor.h  ZInputStream.h  ZipInputStream.h  ZipMember.h  ZipUtils.h
Iguana/Utilities/doc/: TODO  multimethods.sgml
Iguana/Utilities/doc/CVS/: Entries  Repository
Iguana/Utilities/ext/CVS/: Entries  Repository
Iguana/Utilities/ext/aix-dlfcn/: README  dlfcn.c
Iguana/Utilities/ext/pcre/: mkinstalldirs
Iguana/Utilities/ext/rfc1321/: mddriver.c
Iguana/Utilities/ext/uuid/: configure  configure.in  gen_uuid_new.c
Iguana/Utilities/ext/zlib/: ChangeLog  compress.c  gzio.c  minigzip.c  trees.c  uncompr.c  zutil.c  zutil.h
Iguana/Utilities/src/CVS/: Repository
Iguana/Utilities/src/iobase/: FileAcl.cpp  FileError.cpp  FileMappingError.cpp  FileNameLock.cpp  Filename.cpp  IOChannel.cpp  IOChannelPair.cpp  IOChannelTransfer.cpp  IOOutput.cpp  IOSelectFdMap.cpp  IOSelectFdMap.h  IOSelectKqueue.h  IOSelectMethod.cpp  IOSelectSelect.h  IOSelectSig.cpp  IOSelectSig.h  IOSelectSigFd.h  IOSelectWindows.cpp  IOSelectWindows.h  LogPipe.cpp  LogSocket.cpp  NamedPipeServer.cpp  Pipe.cpp  PipeCmd.cpp  Socket.cpp  SocketConst.cpp  SubProcess.cpp  SubProcessError.cpp  TempFile.cpp  UnixFileAcl.cpp  UnixFileMapping.cpp  UnixFilename.cpp  UnixPipe.cpp  UnixSubProcess.cpp  UnixTempFile.cpp  WindowsDirIterator.cpp  WindowsFileMapping.cpp  WindowsFilename.cpp  WindowsNamedPipeServer.cpp  WindowsSubProcess.cpp
Iguana/Utilities/src/iotools/: BufferInputStream.cpp  BufferOutputStream.cpp  FilterInputStream.cpp  FilterOutputStream.cpp  IOChannelInputStream.cpp  InputStream.cpp  OutputStreamBuf.cpp  PipedInputStream.cpp  PipedOutputStream.cpp  PushBackBuffer.cpp  PushBackInputStream.cpp  ReadBuffer.cpp  ReadWriteBuffer.cpp  StdError.cpp  StdioStorage.cpp  WriteBuffer.cpp
Iguana/Utilities/src/utils/: Argz.cpp  AutoLoad.cpp  DebugAids.cpp  Error.cpp  HostInfo.cpp  IntTraits.cpp  Log.cpp  LogStderr.cpp  LowMemoryPool.cpp  ProcessInfo.cpp  Regexp.cpp  RegexpError.cpp  RegexpMatch.cpp  ResourceInfo.cpp  SharedLibrary.cpp  SharedLibraryError.cpp  ShellEnvironment.cpp  Signal.cpp  StringFormat.cpp  StringOps.cpp  SystemError.cpp  SystemInfo.cpp  Time.cpp  UUID.cpp  UserInfo.cpp  Windows.cpp  WindowsUserInfo.cpp
Iguana/Utilities/src/zip/: BZCompressor.cpp  BZDecompressor.cpp  BZError.cpp  BZIPInputStream.cpp  BZIPOutputStream.cpp  CRC32.cpp  CheckedOutputStream.cpp  Checksum.cpp  Compressor.cpp  DecompressInputStream.cpp  Digest.cpp  GZIPInputStream.cpp  GZIPOutputStream.cpp  InteractiveCompressor.cpp  InteractiveDecompressor.cpp  MD5Digest.cpp  TarOutputStream.cpp  ZCompressor.cpp  ZDecompressor.cpp  ZInputStream.cpp  ZipArchive.cpp  ZipInputStream.cpp  ZipMember.cpp  ZipOutputStream.cpp  ZipUtils.cpp
Iguana/Utilities/test/: Test.h
Iguana/Utilities/test/CVS/: Entries  Repository
Iguana/Utilities/test/iobase/: DirIterator01.cpp  DirIterator02.cpp  DirIterator03.cpp  DirIterator04.cpp  File04.cpp  File05.cpp  File06.cpp  FileLock01.cpp  FileMapping02.cpp  FileMapping03.cpp  Filename02_01.cpp  Filename02_04.cpp  Filename02_05.cpp  Filename02_06.cpp  Filename02_09.cpp  Filename02_12.cpp  Filename02_13.cpp  Filename04.cpp  IOSelector02.cpp  IOStatus01.cpp  LocalServerSocket01.cpp  LocalSocket01.cpp  NamedPipeServer01.cpp  Pipe01.cpp  PipeCmd01.cpp  SocketPair01.cpp  SubProcess01.cpp  SubProcess03.cpp  SubProcess05.cpp  SubStorage01.cpp  SubStorage02.cpp  SubStorage03.cpp  SubStorage05.cpp
Iguana/Utilities/test/iotools/: BufferOutputStream01.cpp  FilterInputStream01.cpp  IOChannelOutputStream01.cpp  PipedInputStream01.cpp  StdInputStream01.cpp  StdStorage01.cpp  StdStorage03.cpp  StdStorage04.cpp  StdioStorage01.cpp  StdioStorage02.cpp  StdioStorage03.cpp  StorageInputStream01.cpp
Iguana/Utilities/test/utils/: BitIterator01.cpp  BitPattern01.cpp  BitTraits01.cpp  Debug01.cpp  Hook01.cpp  IntBits01.cpp  IntBits02.cpp  IntBits03.cpp  Log.html  MapIterator01.cpp  MapIterator02.cpp  MultiMethod02.cpp  ProcessInfo01.cpp  ResourceInfo01.cpp  SaveErrno01.cpp  SearchPath01.cpp  Signal02.cpp  (+13 more)
(+4659 files in other folders)
